# CAPE

./: README.md
CAPE/: CAPE.cpp  CAPE.h  CAPE.sln  CAPE.vcxproj  CAPE.vcxproj.filters  CMakeLists.txt  CylinderSeg.cpp  CylinderSeg.h  Histogram.cpp  Histogram.h  Params.h  PlaneSeg.cpp  PlaneSeg.h  package.xml  run_cape_offline.cpp
Data/seq_example/: calib_params.xml
